--- a/ui/narrative/methods/report_metrics/display.yaml
+++ b/ui/narrative/methods/report_metrics/display.yaml
@@ -37,18 +37,28 @@ parameters :
         ui-name : |
             user_ids
         short-hint : |
-            KBaser user_ids
+            KBase user_ids
 
     start_time :
         ui-name : |
             start_time
         short-hint : |
-            Starting time
+            beginning time for the interested time period
+        long-hint: |
+            A time in the format YYYY-MM-DDThh:mm:ssZ, where Z is the difference in time to UTC in the format +/-HHMM,
+            e.g.:
+                2012-12-17T23:24:06-0500 (EST time)
+                2013-04-03T08:56:32+0000 (UTC time)
 
     end_time :
         ui-name : |
             end_time
         short-hint : |
-            Ending time
+            ending time for the interested time period
+        long-hint: |
+            A time in the format YYYY-MM-DDThh:mm:ssZ, where Z is the difference in time to UTC in the format +/-HHMM,
+            e.g.:
+                2012-12-17T23:24:06-0500 (EST time)
+                2013-04-03T08:56:32+0000 (UTC time)
 description : |
     <p>This method provids the user/app metric reports according to metric type selections.</p>
